More search improvements

--- a/SingularityUI/app/styles/icons.styl
+++ b/SingularityUI/app/styles/icons.styl
@@ -69,3 +69,6 @@
         width 0px
         border-right 3px solid
         transform rotateZ(-45deg)
+
+.icon-search-adjacent-text
+    opacity .6
