--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -54,7 +54,7 @@
 
 <section>
     <div class="page-header">
-        <h1>History</h1>
+        <h1>Request History</h1>
     </div>
     <div data-request-history>
         {{> requestHistory}}
