Remove sorting from tables on the request page and make the deploy history table paged per #122.
Still need to make the request history table paged.

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -47,8 +47,10 @@
     <div class="page-header">
         <h1>Deploy history</h1>
     </div>
-    <div data-request-deploy-history>
-        {{> requestDeployHistory}}
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="deploy-history-paginated"></div>
+        </div>
     </div>
 </section>
 
