--- a/SingularityUI/app/views/templates/requestTasksActiveTable.hbs
+++ b/SingularityUI/app/views/templates/requestTasksActiveTable.hbs
@@ -1,7 +1,7 @@
 {{#if requestTasksActive}}
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -9,7 +9,7 @@
                         <th class="visible-desktop">Deploy ID</th>
                         <th class="visible-desktop">Started</th>
                         <th class="hidden-phone">Updated</th>
-                        <th class="hidden-phone" data-sortable="false"></th>
+                        <th class="hidden-phone"></th>
                     </tr>
                 </thead>
                 <tbody>
