--- a/SingularityUI/app/views/templates/requestTasksScheduledTable.hbs
+++ b/SingularityUI/app/views/templates/requestTasksScheduledTable.hbs
@@ -1,12 +1,12 @@
 {{#if requestTasksScheduled}}
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>Name</th>
                         <th>Next run</th>
-                        <th data-sortable="false"></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
