--- a/SingularityUI/app/views/templates/requestHistory.hbs
+++ b/SingularityUI/app/views/templates/requestHistory.hbs
@@ -1,7 +1,7 @@
 {{#if requestHistory.requestUpdates}}
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>State</th>
