--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -58,7 +58,9 @@
     <div class="page-header">
         <h1>Request History</h1>
     </div>
-    <div data-request-history>
-        {{> requestHistory}}
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="history-paginated"></div>
+        </div>
     </div>
 </section>
