First ghetto pass at #126 (I implemented paging, but there is a lame re-render flicker).

--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -72,6 +72,16 @@
 
 <section>
     <div class="page-header">
+        <h1>S3 Logs</h1>
+    </div>
+    <div class="row-fluid">
+        <div class="span12" data-s3-logs-wrapper>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="page-header">
         <h1>Files</h1>
     </div>
     <div class="row-fluid">
