Fix little task overview bug (show the latest history static in the header, not the oldest)

--- a/SingularityUI/app/views/templates/taskOverview.hbs
+++ b/SingularityUI/app/views/templates/taskOverview.hbs
@@ -11,7 +11,7 @@
     </h1>
     {{#if taskHistory.taskUpdates}}
         {{#eachWithFn taskHistory.taskUpdates}}
-            {{#if _first}}
+            {{#if _last}}
                 <p class="lead">
                     {{ taskStateHuman }} as of
                     {{ timestampHuman }}
