make app root customizable

--- a/SingularityService/src/main/resources/com/hubspot/singularity/views/index.mustache
+++ b/SingularityService/src/main/resources/com/hubspot/singularity/views/index.mustache
@@ -7,11 +7,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Singularity</title>
-    <link rel="shortcut icon" href="/singularitytest/static/images/favicon.ico" />
+    <link rel="shortcut icon" href="{{{staticPath}}}/images/favicon.ico" />
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/singularitytest/static/css/app.css">
-    <script src="/singularitytest/static/js/vendor.js"></script>
-    <script src="/singularitytest/static/js/app.js"></script>
+    <link rel="stylesheet" href="{{{staticPath}}}/css/app.css">
+    <script src="{{{basePath}}}/config.js"></script>
+    <script src="{{{staticPath}}}/js/vendor.js"></script>
+    <script src="{{{staticPath}}}/js/app.js"></script>
     <script>require('initialize');</script>
 </head>
 <body>
