--- a/SingularityUI/app/views/templates/status.hbs
+++ b/SingularityUI/app/views/templates/status.hbs
@@ -36,7 +36,7 @@
     </div>
     <div class="row-fluid">
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}requests" data-route="requests">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="requests">{{ state.requests }}</div>
@@ -46,7 +46,7 @@
             </a>
         </div>
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}requests/paused" data-route="requests/paused">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/paused">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="pausedRequests">{{ state.pausedRequests }}</div>
@@ -56,7 +56,7 @@
             </a>
         </div>
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}requests/pending" data-route="requests/pending">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/pending">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="pendingRequests">{{ state.pendingRequests }}</div>
@@ -66,7 +66,7 @@
             </a>
         </div>
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}requests/cleaning" data-route="requests/cleaning">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/cleaning">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="cleaningRequests">{{ state.cleaningRequests }}</div>
@@ -84,7 +84,7 @@
     </div>
     <div class="row-fluid">
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}tasks" data-route="tasks">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/tasks">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="activeTasks">{{ state.activeTasks }}</div>
@@ -94,7 +94,7 @@
             </a>
         </div>
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}tasks/scheduled" data-route="tasks/scheduled">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/tasks/scheduled">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="lateTasks">{{ state.lateTasks }}</div>
@@ -104,7 +104,7 @@
             </a>
         </div>
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}tasks/scheduled" data-route="tasks/scheduled">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/tasks/scheduled">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="futureTasks">{{ state.futureTasks }}</div>
@@ -114,7 +114,7 @@
             </a>
         </div>
         <div class="span3">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}tasks/cleaning" data-route="tasks/cleaning">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/tasks/cleaning">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="cleaningTasks">{{ state.cleaningTasks }}</div>
@@ -132,7 +132,7 @@
     </div>
     <div class="row-fluid">
         <div class="span4">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}racks" data-route="racks">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/racks">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="activeRacks">{{ state.activeRacks }}</div>
@@ -142,7 +142,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}racks" data-route="racks">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/racks">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="deadRacks">{{ state.deadRacks }}</div>
@@ -152,7 +152,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}racks" data-route="racks">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/racks">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="decomissioningRacks">{{ state.decomissioningRacks }}</div>
@@ -170,7 +170,7 @@
     </div>
     <div class="row-fluid">
         <div class="span4">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}slaves" data-route="slaves">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/slaves">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="activeSlaves">{{ state.activeSlaves }}</div>
@@ -180,7 +180,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}slaves" data-route="slaves">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/slaves">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="deadSlaves">{{ state.deadSlaves }}</div>
@@ -190,7 +190,7 @@
             </a>
         </div>
         <div class="span4">
-            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}slaves" data-route="slaves">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/slaves">
                 <div class="well">
                     <div class="big-number">
                         <div class="number" data-state-attribute="decomissioningSlaves">{{ state.decomissioningSlaves }}</div>
