--- a/SingularityUI/app/views/templates/taskOverview.hbs
+++ b/SingularityUI/app/views/templates/taskOverview.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h3><a href="{{#appRoot}}{{/appRoot}}request/{{ request.id }}" data-route="request/{{ request.id }}">{{#hardBreak request.id}}{{/hardBreak}}</a></h3>
+    <h3><a href="{{#appRoot}}{{/appRoot}}/request/{{ request.id }}">{{#hardBreak request.id}}{{/hardBreak}}</a></h3>
     <h1 data-string-length-tens="{{ taskIdStringLengthTens }}">
         {{#hardBreak taskHistory.task.id}}{{/hardBreak}}
         <div class="header-actions">
