--- a/SingularityUI/app/views/templates/filesTable.hbs
+++ b/SingularityUI/app/views/templates/filesTable.hbs
@@ -19,9 +19,9 @@
                     <tr>
                         <td data-value="{{#if isDirectory}}a{{else}}b{{/if}} {{ shortPath }}">
                             {{#if isDirectory}}
-                                <a href="{{#appRoot}}{{/appRoot}}task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}"><span class="icon icon-directory"></span>{{ shortPath }}/</a>
+                                <a href="{{#appRoot}}{{/appRoot}}/task/{{ taskId }}/files{{ relPath }}"><span class="icon icon-directory"></span>{{ shortPath }}/</a>
                             {{else}}
-                                <a href="{{#appRoot}}{{/appRoot}}task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}"><span class="icon icon-file"></span>{{ shortPath }}</a>
+                                <a href="{{#appRoot}}{{/appRoot}}/task/{{ taskId }}/tail{{ relPath }}"><span class="icon icon-file"></span>{{ shortPath }}</a>
                             {{/if}}
                         </td>
                         <td data-value="{{ size }}">
@@ -30,7 +30,7 @@
                         <td data-value="{{#if isDirectory}}a{{else}}b{{/if}} {{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
                         <td class="actions-column">
                             {{#unless isDirectory}}
-                                <a href="{{#appRoot}}{{/appRoot}}task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}">View</a>
+                                <a href="{{#appRoot}}{{/appRoot}}/task/{{ taskId }}/tail{{ relPath }}">View</a>
                                 <a href="{{ downloadLink }}" target="_blank">Download</a>
                             {{/unless}}
                         </td>
