--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -26,7 +26,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Historical tasks &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}request/{{ request.id }}/historical-tasks" data-route="/request/{{ request.id }}/historical-tasks">view more at once</a></small></h1>
+        <h1>Historical tasks &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}/request/{{ request.id }}/historical-tasks">view more at once</a></small></h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
@@ -45,7 +45,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Deploy history &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}request/{{ request.id }}/deploy-history" data-route="/request/{{ request.id }}/deploy-history">view more at once</a></small></h1>
+        <h1>Deploy history &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}/request/{{ request.id }}/deploy-history">view more at once</a></small></h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
@@ -56,7 +56,7 @@
 
 <section>
     <div class="page-header">
-        <h1>Request History &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}request/{{ request.id }}/request-history" data-route="/request/{{ request.id }}/request-history">view more at once</a></small></h1>
+        <h1>Request History &nbsp;<small><a href="{{#appRoot}}{{/appRoot}}/request/{{ request.id }}/request-history">view more at once</a></small></h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
