--- a/SingularityUI/app/views/templates/requestsPaused.hbs
+++ b/SingularityUI/app/views/templates/requestsPaused.hbs
@@ -7,16 +7,16 @@
         <div class="span12">
             <ul class="nav nav-pills">
                 <li>
-                    <a href="{{#appRoot}}{{/appRoot}}requests" data-route="requests">Active</a>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests">Active</a>
                 </li>
                 <li class="active">
-                    <a href="{{#appRoot}}{{/appRoot}}requests/paused" data-route="requests/paused">Paused</a>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests/paused">Paused</a>
                 </li>
                 <li>
-                    <a href="{{#appRoot}}{{/appRoot}}requests/pending" data-route="requests/pending">Pending</a>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests/pending">Pending</a>
                 </li>
                 <li>
-                    <a href="{{#appRoot}}{{/appRoot}}requests/cleaning" data-route="requests/cleaning">Cleaning</a>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests/cleaning">Cleaning</a>
                 </li>
             </ul>
         </div>
