--- a/SingularityUI/app/views/templates/requestsPausedBody.hbs
+++ b/SingularityUI/app/views/templates/requestsPausedBody.hbs
@@ -18,7 +18,7 @@
                     <tbody>
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
-                                <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}/request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td class="hidden-phone" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td class="visible-desktop">{{ deployUser }}</td>
                                 <td class="visible-desktop">{{ instances }}</td>
@@ -62,7 +62,7 @@
                     <tbody>
                         {{#eachWithFn requestsScheduled}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
-                                <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}/request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td class="visible-desktop" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td class="visible-large-desktop">{{ deployUser }}</td>
                                 <td class="visible-desktop">{{ schedule }}</td>
