--- a/SingularityService/src/main/resources/com/hubspot/singularity/views/config.mustache
+++ b/SingularityService/src/main/resources/com/hubspot/singularity/views/config.mustache
@@ -1,10 +1,8 @@
-window.singularity = {
-    config: {
-        appRoot: "{{{appRoot}}}",
-        apiBase: "{{{apiBase}}}",
-        mesosLogPort: {{{mesosLogsPort}}},
-        {{#mesosLogsPortHttps}}
-        mesosLogsPortHttps: {{{mesosLogsPortHttps}}}
-        {{/mesosLogsPortHttps}}
-    }
+window.config = {
+    appRoot: "{{{appRoot}}}",
+    apiBase: "{{{apiBase}}}",
+    mesosLogPort: {{{mesosLogsPort}}},
+    {{#mesosLogsPortHttps}}
+    mesosLogsPortHttps: {{{mesosLogsPortHttps}}}
+    {{/mesosLogsPortHttps}}
 };
