--- a/SingularityExecutor/src/main/resources/deploy.env.hbs
+++ b/SingularityExecutor/src/main/resources/deploy.env.hbs
@@ -1,7 +1,7 @@
 # mesos task env
-{{#env}}
-export {{{name}}}={{{value}}}
-{{/env}}
+{{#each env}}
+export {{{name}}}={{{bashEscaped value}}}
+{{/each}}
 
 # HubSpot-Specific-TODO
 export RODAN_HOSTNAME="$TASK_REQUEST_ID-$INSTANCE_NO"
