--- a/SingularityUI/app/views/templates/status.hbs
+++ b/SingularityUI/app/views/templates/status.hbs
@@ -35,17 +35,27 @@
         <h1>Requests</h1>
     </div>
     <div class="row-fluid">
-        <div class="span3">
+        <div class="span2">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests">
                 <div class="well">
                     <div class="big-number">
-                        <div class="number" data-state-attribute="requests">{{ state.requests }}</div>
+                        <div class="number" data-state-attribute="requests">{{ state.activeRequests }}</div>
                         <div class="number-label">Active</div>
                     </div>
                 </div>
             </a>
         </div>
-        <div class="span3">
+        <div class="span2">
+            <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number" data-state-attribute="requests">{{ state.cooldownRequests }}</div>
+                        <div class="number-label">Cooldown</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="span2">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/paused">
                 <div class="well">
                     <div class="big-number">
@@ -55,7 +65,7 @@
                 </div>
             </a>
         </div>
-        <div class="span3">
+        <div class="span2">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/pending">
                 <div class="well">
                     <div class="big-number">
@@ -65,7 +75,7 @@
                 </div>
             </a>
         </div>
-        <div class="span3">
+        <div class="span2">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/cleaning">
                 <div class="well">
                     <div class="big-number">
