--- a/SingularityUI/app/views/templates/status.hbs
+++ b/SingularityUI/app/views/templates/status.hbs
@@ -35,7 +35,7 @@
         <h1>Requests</h1>
     </div>
     <div class="row-fluid">
-        <div class="span2">
+        <div class="span2dot5">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests">
                 <div class="well">
                     <div class="big-number">
@@ -45,7 +45,7 @@
                 </div>
             </a>
         </div>
-        <div class="span2">
+        <div class="span2dot5">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests">
                 <div class="well">
                     <div class="big-number">
@@ -55,7 +55,7 @@
                 </div>
             </a>
         </div>
-        <div class="span2">
+        <div class="span2dot5">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/paused">
                 <div class="well">
                     <div class="big-number">
@@ -65,7 +65,7 @@
                 </div>
             </a>
         </div>
-        <div class="span2">
+        <div class="span2dot5">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/pending">
                 <div class="well">
                     <div class="big-number">
@@ -75,7 +75,7 @@
                 </div>
             </a>
         </div>
-        <div class="span2">
+        <div class="span2dot5">
             <a class="big-number-link" href="{{#appRoot}}{{/appRoot}}/requests/cleaning">
                 <div class="well">
                     <div class="big-number">
