--- a/SingularityUI/app/views/templates/tail.hbs
+++ b/SingularityUI/app/views/templates/tail.hbs
@@ -10,6 +10,17 @@
     </div>
 </div>
 
-<div class="tail-indicator">
-    <div class="page-loader small centered"></div>
+<div class="tail-corner-container">
+	<div>	
+		<a class="tail-top-button">To top</a>
+	</div>
+	<div>
+		<a class="tail-bottom-button">To bottom</a>
+	</div>
+	
+	<div>
+		<div class="tail-indicator">
+		    <div class="page-loader small centered"></div>
+		</div>
+	</div>
 </div>
