Made 'to top' button fade out if at top

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -57,6 +57,11 @@
         .tail-bottom-button
             opacity .5
 
+    &.at-top
+        
+        .tail-top-button
+            opacity .5
+
     &.fetchNext, &.fetchPrev
         
         .tail-indicator
