Added requests cooldown filter

--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -7,7 +7,10 @@
         <div class="span12">
             <ul class="nav nav-pills">
                 <li class="active">
-                    <a href="{{#appRoot}}{{/appRoot}}/requests">Active</a>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests/active">Active</a>
+                </li>
+                <li>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests/cooldown">Cooldown</a>
                 </li>
                 <li>
                     <a href="{{#appRoot}}{{/appRoot}}/requests/paused">Paused</a>
