Added state in request detail view

--- a/SingularityUI/app/styles/headerActions.styl
+++ b/SingularityUI/app/styles/headerActions.styl
@@ -42,3 +42,12 @@
             &[data-action="remove"]
                 background $removeRed
                 color #fff
+
+.request-state
+    text-transform lowercase
+    padding 5px .8em
+    line-height 27px
+    font-size 15px
+    border-radius 4px
+    background #ddd
+    color #666
