Initial implementation of "all" request tab

--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -6,6 +6,9 @@
     <div class="row-fluid">
         <div class="span12">
             <ul class="nav nav-pills">
+                <li>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests">All</a>
+                </li>
                 <li class="active">
                     <a href="{{#appRoot}}{{/appRoot}}/requests/active">Active</a>
                 </li>
