--- a/SingularityUI/app/views/templates/requestsCleaning.hbs
+++ b/SingularityUI/app/views/templates/requestsCleaning.hbs
@@ -7,6 +7,9 @@
         <div class="span12">
             <ul class="nav nav-pills">
                 <li>
+                    <a href="{{#appRoot}}{{/appRoot}}/requests">All</a>
+                </li>
+                <li>
                     <a href="{{#appRoot}}{{/appRoot}}/requests/active">Active</a>
                 </li>
                 <li>
