Stylistic changes to request detail state box

--- a/SingularityUI/app/styles/headerActions.styl
+++ b/SingularityUI/app/styles/headerActions.styl
@@ -43,11 +43,12 @@
                 background $removeRed
                 color #fff
 
-.request-state
+.subhead .request-state
     text-transform lowercase
-    padding 5px .8em
+    padding 4px .8em
     line-height 27px
-    font-size 15px
+    font-size 18px
     border-radius 4px
-    background #ddd
-    color #666
+    background #888
+    color #fff
+    margin-right .5em
