--- a/SingularityUI/app/views/templates/requestsAllBody.hbs
+++ b/SingularityUI/app/views/templates/requestsAllBody.hbs
@@ -31,7 +31,7 @@
                                 <td class="visible-large-desktop">{{ instances }}</td>
                                 <td class="visible-large-desktop">{{ deployId }}</td>
                                 <td class="visible-large-desktop">{{ deployUser }}</td>
-                                <td class="hidden-phone" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                <td class="hidden-phone" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHumanShort }}</span></td>
 
                                 {{#ifEqual requestsSubFilter "daemon"}}{{else}}
                                 {{#ifEqual requestsSubFilter "on-demand"}}{{else}}
