Fixed table head vertical-align

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -12,7 +12,10 @@
         white-space nowrap
 
 .table, table, table[data-sortable]
-
+    
+    th
+        vertical-align top
+    
     th, td
 
         // Regular links
