--- a/SingularityUI/app/views/templates/requestsCooldown.hbs
+++ b/SingularityUI/app/views/templates/requestsCooldown.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>Paused requests</h1>
+    <h1>Requests on cooldown</h1>
 </header>
 
 <section>
