--- a/SingularityUI/app/views/templates/requestsCooldownBody.hbs
+++ b/SingularityUI/app/views/templates/requestsCooldownBody.hbs
@@ -1,7 +1,4 @@
 <section>
-    <div class="page-header">
-        <h1>Cooldown</h1>
-    </div>
     <div class="row-fluid">
         <div class="span12">
             {{#if requests.length}}
@@ -12,6 +9,7 @@
                             <th class="hidden-phone">Requested</th>
                             <th class="visible-desktop">Deploy user</th>
                             <th class="visible-desktop">Instances</th>
+                            <th class="visible-desktop">Schedule</th>
                             <th class="hidden-phone" data-sortable="false"></th>
                         </tr>
                     </thead>
@@ -22,6 +20,7 @@
                                 <td class="hidden-phone" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td class="visible-desktop">{{ deployUser }}</td>
                                 <td class="visible-desktop">{{ instances }}</td>
+                                <td class="visible-desktop">{{ schedule }}</td>
                                 <td class="actions-column hidden-phone">
                                     {{#if onDemand}}
                                         <a data-request-id="{{ id }}" data-request-type="on-demand" data-action="run-now">Run now</a>
