Added colour-coding to state indicator

--- a/SingularityUI/app/styles/headerActions.styl
+++ b/SingularityUI/app/styles/headerActions.styl
@@ -53,5 +53,14 @@
     color #fff
     margin-right .5em
     
+    &.ACTIVE
+        background #519D3D
+    
+    &.PAUSED
+        background #3374CD
+    
+    &.SYSTEM_COOLDOWN
+        background #BF5D36
+    
     &:empty
         display none
