Visually separated transitive table navs

--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -5,7 +5,7 @@
 <section>
     <div class="row-fluid">
         <div class="span12">
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills" id="table-nav-pills">
                 <li>
                     <a href="{{#appRoot}}{{/appRoot}}/requests">All</a>
                 </li>
@@ -15,7 +15,7 @@
                 <li>
                     <a href="{{#appRoot}}{{/appRoot}}/requests/cooldown">Cooldown</a>
                 </li>
-                <li>
+                <li id="paused-pill">
                     <a href="{{#appRoot}}{{/appRoot}}/requests/paused">Paused</a>
                 </li>
                 <li>
