Added tailer fading if hovering near bottom

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -89,6 +89,14 @@
         &:before
             content ""
 
+    &.hover-last-5
+
+        .tail-corner-container
+            opacity .25
+        
+            &:hover
+                opacity 1
+
 .tail-outer
     position relative
     font-family Consolas, "Liberation Mono", Courier, monospace
