only pull resource usage if task is running

--- a/SingularityUI/app/views/templates/taskResourceUsage.hbs
+++ b/SingularityUI/app/views/templates/taskResourceUsage.hbs
@@ -1,3 +1,4 @@
+{{#unless taskHistory.task.isStopped}}
 <section data-task-resource-usage>
     <div class="page-header">
         <h1>Resource Usage</h1>
@@ -49,3 +50,4 @@
         </div>
     </div>
 </section>
+{{/unless}}
