surface environment variables in tasks

--- a/SingularityUI/app/styles/definitionList.styl
+++ b/SingularityUI/app/styles/definitionList.styl
@@ -36,3 +36,26 @@ dl
 
         dd
             width 80%
+
+dl.wider
+    @media (min-width: 769px)
+
+        dt, dd
+            float left
+
+        dt
+            width 40%
+            padding-right 5%
+            clear left
+
+        dd
+            width 60%
+            margin 0 0 1.5em
+
+    @media (min-width: 1000px)
+
+        dt
+            width 30%
+
+        dd
+            width 70%
