--- a/SingularityExecutor/src/main/resources/logrotate.conf.hbs
+++ b/SingularityExecutor/src/main/resources/logrotate.conf.hbs
@@ -16,5 +16,6 @@ notifempty
 {{#if extrasFiles}}
 {{#each extrasFiles}}{{{this}}} {{/each}} {
   dateformat {{{ extrasDateformat }}}
+  missingok
 }
 {{/if}}
